# three-tier-task-manager

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO.md  INTERVIEW.md  LICENSE  Makefile  README.md  SECURITY.md  compose.dev.yml  compose.prod.yml  compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_create_tasks.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py  wait_for_db.py
backend/app/api/: tasks.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_config.py  test_schemas.py
docs/adr/: 0001-four-containers-three-tiers.md  0002-migrations-at-startup.md
docs/explanations/: development-vs-production.md
docs/runbooks/: database-recovery.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/scripts/: build.mjs  dev-server.mjs
frontend/src/: app.js  index.html  styles.css  task-utils.js
frontend/tests/: task-utils.test.js
nginx/: default.conf
scripts/: backup.sh  restore.sh
