[build-system]
requires = ["setuptools==78.1.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-api"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.15.2",
  "fastapi==0.115.12",
  "psycopg[binary]==3.2.6",
  "pydantic-settings==2.8.1",
  "sqlalchemy==2.0.40",
  "structlog==25.2.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.11.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
markers = ["integration: tests that exercise the HTTP and database layers"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]
